feat: quotations from user articles
