# packages/api/src/handlers/mod.rs
@@ -1,3 +1,4 @@
+pub mod article_quotations;
 pub mod articles;
 pub mod auth;
 pub mod books;
